WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
262176
Fix RealtimeMediaSource build with release logs disabled
https://bugs.webkit.org/show_bug.cgi?id=262176
Summary
Fix RealtimeMediaSource build with release logs disabled
Olivier Blin
Reported
2023-09-27 05:01:18 PDT
This got broken in
261866@main
where WTFLogAlways() usage has been replaced by ERROR_LOG_IF().
Attachments
Add attachment
proposed patch, testcase, etc.
Olivier Blin
Comment 1
2023-09-27 05:02:20 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/18272
EWS
Comment 2
2023-09-28 01:29:22 PDT
Committed
268571@main
(98a5e9a7bb81): <
https://commits.webkit.org/268571@main
> Reviewed commits have been landed. Closing PR #18272 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-09-28 01:30:18 PDT
<
rdar://problem/116169433
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug