Fix RealtimeMediaSource build with release logs disabled https://bugs.webkit.org/show_bug.cgi?id=262176

Reviewed by Philippe Normand.

This got broken in 261866@main where WTFLogAlways() usage has been
replaced by ERROR_LOG_IF().

* Source/WebCore/platform/mediastream/RealtimeMediaSource.cpp:
(WebCore::RealtimeMediaSource::supportsSizeFrameRateAndZoom):

Canonical link: https://commits.webkit.org/268571@main